docs(spot): simplify stress test startup commands by referencing jvm args files